fixed z-index issue

--- a/src/components/Homepage/WorkAndCV.scss
+++ b/src/components/Homepage/WorkAndCV.scss
@@ -1,4 +1,8 @@
 .workcv {
+  &-wrapper {
+    z-index: 0;
+  }
+
   &-bg {
     &-container {
       inset: 0;
@@ -15,6 +19,10 @@
       background-size: 150px;
       opacity: 0.06;
     }
+  }
+
+  &-content {
+    z-index: 2;
   }
 
   &-divider {
